# SSD-PlanTracker

./: README.md  docker-compose.yml
.github/workflows/: main.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini
backend/.github/workflows/: ci.yml
backend/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py  telegram_bot.py
backend/app/routers/: activity_router.py  tag_router.py  user_router.py
backend/tests/: README.md  conftest.py  test_activities.py  test_auth.py  test_tags.py  test_users.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/.github/workflows/: ci.yml
frontend/src/: App.tsx  index.scss
frontend/src/api/: activities.ts  config.ts  index.ts  tags.ts
frontend/src/components/: index.ts
frontend/src/components/AuthLayout/: AuthLayout.module.scss  AuthLayout.tsx
frontend/src/components/Button/: Button.module.scss  Button.tsx
frontend/src/components/ConfirmDialog/: ConfirmDialog.module.scss  ConfirmDialog.tsx  index.ts
frontend/src/components/Header/: Header.module.scss  Header.tsx
frontend/src/components/Icons/: Icons.tsx
frontend/src/components/InputField/: InputField.module.scss  InputField.tsx  index.ts
frontend/src/components/Task/: Task.module.scss  Task.tsx  index.ts  types.ts
frontend/src/hooks/: useActivities.ts
frontend/src/pages/: index.ts
frontend/src/redux/: hooks.ts  store.ts
frontend/src/routes/: AppRoutes.tsx  ProtectedRoute.tsx  index.ts  routeConstants.ts
frontend/src/styles/: colors.scss
(+25 files in other folders)
